# eraser

./: .clang-tidy  CMakeLists.txt  README.md
.github/workflows/: test.yml
include/eraser/: erased.hpp  erased.inl  id.inl  interface.hpp  interface.inl  method.hpp  signature.hpp  utils.hpp
include/eraser/experimental/: deduce.hpp  deduce.inl
include/eraser/storage/: unique.hpp  unique.inl
include/eraser/traits/: interface.hpp
tests/: CMakeLists.txt  classes.hpp  deduce.cpp  erased.cpp  str.hpp
